[tool.poetry]
name = "LLM classifier"
version = "0.1.0"
description = "LLM classification server"
authors = ["Yi Yang <yiyangnlp@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
openai = "^1.51.0"
pydantic = "^2.8.2"
datasets = "^3.0.1"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"